library/phpexcel/
library/fpdf/1.84/
library/siga.class.php
library/siga.select.js
library/siga.config.example.php

module/estructura_presupuestaria/
module/nomina/
module/usuario/main.js

class/estructura_presupuestaria.class.php
class/nomina.class.php
class/usuario.class.php
class/formulacion.class.php
class/cuenta_presupuestaria.class.php

report/nomina_listado_banco_xls_formato_a.php
report/nomina_listado_banco_xls_formato_b.php
report/nomina_listado_banco_xls_formato_c.php
report/nomina_recibo_pago.php
report/asistencia_a.php
report/asistencia_b.php
report/asistencia_c.php
report/asistencia_d.php
report/cheque.php
report/comprobante.php
report/comprobante_retencion_islr.php
report/comprobante_retencion_iva.php
report/contabilidad_balance_comprobacion.php
report/contabilidad_balance_general_b.php
report/contabilidad_diario.php
report/contabilidad_estado_resultados.php
report/contabilidad_mayor_a.php
report/ejecucion.php
report/ejecucion_alcaldia_mejia.php
report/ejecucion_bsdigital.php
report/ejecucion_bss.php
report/estado_cuenta.php
report/ficha_arc.php
report/ficha_carnet.php
report/ficha_constancia_trabajo.php
report/ficha_constancia_trabajo2.php
report/formulacion.php
report/listado_personas.php
report/mayor.php
report/modificacion_a.php
report/nomina.old.php
report/nomina.php
report/nomina_b.php
report/nomina_distribucion_presupuestaria.php
report/nomina_listado_aportes.php
report/nomina_listado_concepto.php
report/nomina_listado_firma.php
report/nomina_nueva.php
report/nomina_resumen_presupuestario_contable.php
report/nomina_resumen_presupuestario_contable_txt.php
report/nomina_xls.php
report/nomina_xls_v2.php
report/orden_compra.php
report/orden_pago.php
report/pago.php
report/requisicion_externa.php
report/retencion_efectuada.php
report/retencion_emitida.php
module/academia_reportes/pdf/cronograma_anual.php
module/academia_reportes/pdf/curso_actacertificados.php
module/academia_reportes/pdf/curso_asistencia.php